--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.cdnfonts.com/css/ica-rubrik-black');
 @import url('https://fonts.cdnfonts.com/css/poppins');
+body {
+    transform: scale(0.67); 
+    transform-origin: top left;
+    width: 150%;
+}
+
 
 .banner{
     width: 100%;
